# MyProtocol

./: .gitignore  CMakeLists.txt  MyProtocol.sln  ReadMe.md
MyProtocol/: CMakeLists.txt  MyProtocol.cpp  MyProtocol.vcproj
MyProtocol/jsoncpp/: json.h
bigCheck/: CMakeLists.txt  bigCheck.cpp  bigCheck.vcproj
bigCheckSimple/: bigCheckSimple.cpp  bigCheckSimple.vcproj
